; ModuleID = '/home/carl/AnghaBench/darwin-xnu/osfmk/ipc/extr_ipc_mqueue.c_ipc_mqueue_remove_all.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/osfmk/ipc/extr_ipc_mqueue.c_ipc_mqueue_remove_all.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { %struct.waitq_set }
%struct.waitq_set = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @ipc_mqueue_remove_all(%struct.TYPE_4__* %0) #0 {
  %2 = alloca %struct.TYPE_4__*, align 8
  %3 = alloca %struct.waitq_set*, align 8
  store %struct.TYPE_4__* %0, %struct.TYPE_4__** %2, align 8
  %4 = load %struct.TYPE_4__*, %struct.TYPE_4__** %2, align 8
  %5 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %4, i32 0, i32 0
  store %struct.waitq_set* %5, %struct.waitq_set** %3, align 8
  %6 = load %struct.TYPE_4__*, %struct.TYPE_4__** %2, align 8
  %7 = call i32 @imq_lock(%struct.TYPE_4__* %6)
  %8 = load %struct.waitq_set*, %struct.waitq_set** %3, align 8
  %9 = call i32 @waitqs_is_set(%struct.waitq_set* %8)
  %10 = call i32 @assert(i32 %9)
  %11 = load %struct.waitq_set*, %struct.waitq_set** %3, align 8
  %12 = call i32 @waitq_set_unlink_all_unlock(%struct.waitq_set* %11)
  ret void
}

declare dso_local i32 @imq_lock(%struct.TYPE_4__*) #1

declare dso_local i32 @assert(i32) #1

declare dso_local i32 @waitqs_is_set(%struct.waitq_set*) #1

declare dso_local i32 @waitq_set_unlink_all_unlock(%struct.waitq_set*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
